Fixed new entry create error. Closes #1

--- a/app/views/mentries/_form.html.erb
+++ b/app/views/mentries/_form.html.erb
@@ -22,23 +22,23 @@
   </div>
 
   <div class="field">
-    <%= form.label :maccount %>
-    <%= form.select :maccount, maccounts_dropdown %>
+    <%= form.label :maccount, "Account" %>
+    <%= form.select :maccount_id, maccounts_dropdown %>
   </div>
 
   <div class="field">
-    <%= form.label :mtype %>
-    <%= form.select :mtype, mtypes_dropdown %>
+    <%= form.label :mtype, "Type" %>
+    <%= form.select :mtype_id, mtypes_dropdown %>
   </div>
 
   <div class="field">
-    <%= form.label :mcategory %>
-    <%= form.select :mcategory, mcategories_dropdown %>
+    <%= form.label :mcategory, "Category" %>
+    <%= form.select :mcategory_id, mcategories_dropdown %>
   </div>
 
   <div class="field">
-    <%= form.label :mlocation %>
-    <%= form.select :mlocation, mlocations_dropdown %>
+    <%= form.label :mlocation, "Location" %>
+    <%= form.select :mlocation_id, mlocations_dropdown %>
   </div>
 
   <div class="field">
