Put maccount#show table into partial and rendered. Closes #14, closes #9, closes #10.

--- a/app/views/maccounts/show.html.erb
+++ b/app/views/maccounts/show.html.erb
@@ -5,7 +5,7 @@
   <%= @maccount.name %>
 </h1>
 
-
+<%= render 'mentries/table' %>
 
 <%= link_to 'Edit', edit_maccount_path(@maccount) %> |
 <%= link_to 'Back', maccounts_path %>
