Added statuses dropdown to entry#new form. Closes #19

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,6 +9,8 @@
   <li><%= link_to 'New Category', new_mcategory_path %></li>
   <li><%= link_to 'Types', mtypes_path %></li>
   <li><%= link_to 'New Type', new_mtype_path %></li>
+  <li><%= link_to 'Statuses', mstatuses_path %></li>
+  <li><%= link_to 'New Status', new_mstatus_path %></li>
   <li><%= link_to current_user.email, edit_user_registration_path %></li>
   <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
 <% else %>
