--- a/app/views/mentries/_entry.html.erb
+++ b/app/views/mentries/_entry.html.erb
@@ -1,4 +1,4 @@
-<table class="table">
+<!-- <table class="table">
   <thead>
     <tr>
       <th scope="col">###</th>
@@ -27,4 +27,4 @@
     <% end %>
   <% end %>
   </tbody>
-</table>
+</table> -->
