--- a/app/views/mstatuses/index.html.erb
+++ b/app/views/mstatuses/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mstatuses</h1>
+<h1>Statuses</h1>
 
 <table>
   <thead>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Mstatus', new_mstatus_path %>
+<%= link_to 'New Status', new_mstatus_path %>
