--- a/app/views/mentries/show.html.erb
+++ b/app/views/mentries/show.html.erb
@@ -1,19 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Amount:</strong>
-  <%= @mentry.amount %>
-</p>
-
-<p>
-  <strong>Date:</strong>
-  <%= @mentry.date %>
-</p>
-
-<p>
-  <strong>Note:</strong>
-  <%= @mentry.note %>
-</p>
+<%= render 'mentries/entry' %>
 
 <%= link_to 'Edit', edit_mentry_path(@mentry) %> |
 <%= link_to 'Back', mentries_path %>
