--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Dashboard#index</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
-<%= render 'dashboard/spending' %>
+<% if user_signed_in? %>
+  <%= render 'dashboard/spending' %>
+<% else %>
+  <%= render 'loggedout' %>
+<% end %>
