--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -13,7 +13,7 @@
             <% mcategory.mentries.each do |entry| %>
               <% total += entry.amount %>
             <% end %>
-            <th scope="row"><%= total %></th>
+            <th scope="row"><%= number_to_currency(total) %></th>
         <% end %>
         </tr>
   </tbody>
