--- a/app/views/mentries/_entry.html.erb
+++ b/app/views/mentries/_entry.html.erb
@@ -17,7 +17,7 @@
   <tbody class="table-row">
       <tr>
         <td scope="row"><%= @mentry.id %></td>
-        <td scope="row"><%= @mentry.amount %></td>
+        <td scope="row"><%= number_to_currency(@mentry.amount) %></td>
         <td scope="row"><%= @mentry.date %></td>
         <td scope="row"><%= @mentry.note %></td>
         <td scope="row"><%= @mentry.mcategory.name %></td>
