--- a/app/views/mcategories/show.html.erb
+++ b/app/views/mcategories/show.html.erb
@@ -1,9 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<h1>
   <strong>Name:</strong>
   <%= @mcategory.name %>
-</p>
+</h1>
 
+<%= render 'mcategories/entries' %>
 <%= link_to 'Edit', edit_mcategory_path(@mcategory) %> |
 <%= link_to 'Back', mcategories_path %>
