--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,5 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
-
+<h1>Dashboard</h1>
+<h2>Savings Breakdown</h2>
 <% if user_signed_in? %>
   <%= render 'dashboard/spending' %>
 <% else %>
