--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,6 +32,7 @@
           View By
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="<%= mentries_path %>">Entries</a>
           <a class="dropdown-item" href="<%= mcategories_path %>">Categories</a>
           <a class="dropdown-item" href="<%= mlocations_path %>">Locations</a>
           <!-- <div class="dropdown-divider"></div> -->
