--- a/app/views/mentries/index.html.erb
+++ b/app/views/mentries/index.html.erb
@@ -6,6 +6,7 @@
    <%= submit_tag "Search", class: 'btn btn-outline-success my-2 my-sm-0' %>
  </span>
 <% end %>
+<%= link_to 'Clear Search', mentries_path %>
 
 <h1>Entries</h1>
 <%= render 'dashboard/entries' %>
