--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,10 @@
 
 <% if user_signed_in? %>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="<%= root_path %>">Dashboard</a>
+  <a class="navbar-brand" href="<%= root_path %>">
+    <%= image_tag("mustache-green.png", width: "40", height: "40", class: "d-inline-block align-top") %>
+    <span class="brand-font">oostach.io</span>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
