--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,14 +1,16 @@
+// font-family: 'Roboto Mono', monospace;
+// font-family: 'IBM Plex Serif', serif;
+
 body {
   background-color: #fff;
   color: #333;
   margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-size: 13px;
   line-height: 18px;
 }
@@ -28,12 +30,13 @@ a {
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: #107B10;
   }
 }
 
 th {
   padding-bottom: 5px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 td {
@@ -62,16 +65,6 @@ div {
   padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
-
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px -7px 0;
-    background-color: #c00;
-    color: #fff;
-  }
 
   ul li {
     font-size: 12px;
