--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,6 +3,9 @@
 <h2>Checking Balance</h2>
 <p><%= account_sum %></p>
 
+<p><%= render 'dashboard/maccounts' %></p>
+<p><%= render 'dashboard/maccount_totals' %></p>
+
 <h2>Spending Breakdown</h2>
 <% if user_signed_in? %>
   <%= render 'dashboard/spending' %>
