--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,10 +1,6 @@
 <h1>Dashboard</h1>
 
-<h2>Checking Balance</h2>
-<p><%= account_sum %></p>
-
-<p><%= render 'dashboard/maccounts' %></p>
-<p><%= render 'dashboard/maccount_totals' %></p>
+<%= render 'dashboard/maccount_balances' %>
 
 <h2>Spending Breakdown</h2>
 <% if user_signed_in? %>
