Added new entry form to dashboard. Closes #51

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Dashboard</h1>
 
+<h2>New Entry</h2>
+<%= render 'mentries/form', mentry: @mentry %>
+
+<h2>Account Balances</h2>
 <%= render 'dashboard/maccount_balances' %>
 
 <h2>Spending Breakdown</h2>
