--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,7 +3,7 @@
 <h2>New Entry</h2>
 <%= render 'mentries/form', mentry: @mentry %>
 
-<h2>Account Balances</h2>
+<h2 id="account-balances">Account Balances</h2>
 <%= render 'dashboard/maccount_balances' %>
 
 <h2>Spending Breakdown</h2>
