--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,10 @@
 <h1>Dashboard</h1>
 
-<h2>New Entry</h2>
-<%= render 'mentries/form', mentry: @mentry %>
+<div id="app2">
+  <h2>New Entry</h2>
+  <%= render 'mentries/form', mentry: @mentry %>
+</div>
+
 
 <h2 id="account-balances">Account Balances</h2>
 <%= render 'dashboard/maccount_balances' %>
