--- a/app/views/dashboard/_entries.html.erb
+++ b/app/views/dashboard/_entries.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th scope="col">###</th>
       <th scope="col">Amount</th>
+      <th scope="col">Account</th>
       <th scope="col">Date</th>
       <th scope="col">Note</th>
       <th scope="col">Category</th>
@@ -20,6 +21,7 @@
       <tr>
         <td scope="row"><%= mentry.id %></td>
         <td scope="row"><%= number_to_currency(mentry.amount) %></td>
+        <td scope="row"><%= mentry.maccount.name %></td>
         <td scope="row"><%= mentry.date %></td>
         <td scope="row"><%= mentry.note %></td>
         <td scope="row"><%= mentry.mcategory.name %></td>
