--- a/app/views/mentries/_form.html.erb
+++ b/app/views/mentries/_form.html.erb
@@ -1,57 +1,57 @@
-<%= form_with(model: mentry, local: true) do |form| %>
-  <% if mentry.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(mentry.errors.count, "error") %> prohibited this mentry from being saved:</h2>
+    <%= form_with model: Mentry.new, url: root_path do |form| %>
+      <% if mentry.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(mentry.errors.count, "error") %> prohibited this mentry from being saved:</h2>
 
-      <ul>
-      <% mentry.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% mentry.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount %>
-  </div>
+      <div class="field">
+        <%= form.label :amount %>
+        <%= form.text_field :amount %>
+      </div>
 
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.datetime_select :date %>
-  </div>
+      <div class="field">
+        <%= form.label :date %>
+        <%= form.datetime_select :date %>
+      </div>
 
-  <div class="field">
-    <%= form.label :mstatus, "Status" %>
-    <%= form.select :mstatus_id, mstatuses_dropdown %>
-  </div>
+      <div class="field">
+        <%= form.label :mstatus, "Status" %>
+        <%= form.select :mstatus_id, mstatuses_dropdown %>
+      </div>
 
-  <div class="field">
-    <%= form.label :maccount, "Account" %>
-    <%= form.select :maccount_id, maccounts_dropdown %>
-  </div>
+      <div class="field">
+        <%= form.label :maccount, "Account" %>
+        <%= form.select :maccount_id, maccounts_dropdown %>
+      </div>
 
-  <div class="field">
-    <%= form.label :mtype, "Type" %>
-    <%= form.select :mtype_id, mtypes_dropdown %>
-  </div>
+      <div class="field">
+        <%= form.label :mtype, "Type" %>
+        <%= form.select :mtype_id, mtypes_dropdown %>
+      </div>
 
-  <div class="field">
-    <%= form.label :mcategory, "Category" %>
-    <%= form.select :mcategory_id, mcategories_dropdown %>
-  </div>
+      <div class="field">
+        <%= form.label :mcategory, "Category" %>
+        <%= form.select :mcategory_id, mcategories_dropdown %>
+      </div>
 
-  <div class="field">
-    <%= form.label :mlocation, "Location" %>
-    <%= form.select :mlocation_id, mlocations_dropdown %>
-  </div>
+      <div class="field">
+        <%= form.label :mlocation, "Location" %>
+        <%= form.select :mlocation_id, mlocations_dropdown %>
+      </div>
 
-  <div class="field">
-    <%= form.label :note %>
-    <%= form.text_area :note %>
-  </div>
+      <div class="field">
+        <%= form.label :note %>
+        <%= form.text_area :note %>
+      </div>
 
-  <div class="actions">
-    <%= form.submit "Create Entry" %>
-  </div>
-<% end %>
+      <div class="actions">
+        <%= form.submit "Create Entry" %>
+      </div>
+    <% end %>
