Made alert box pop up if 'transfer' is selected from dropdown.

--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -1,2 +1,13 @@
 // alert('hi!')
 $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>")
+
+// var select_transfer;
+// $(document).on('change','#transfer', function(){
+//     select_transfer = $(this).val();
+//       if (select_transfer == 'transfer') {
+//         alert("You selected transfer!");
+//       }
+//       else {
+//         alert("What's going on here?");
+//       }
+//   });
