--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -11,8 +11,10 @@
             <th scope="row"><%= link_to mcategory.name, mcategory_path(mcategory.id) %></th>
             <% total = 0 %>
             <% mcategory.mentries.each do |entry| %>
-              <% if entry.mtype.name != 'Transfer' %>
+              <% if entry.mtype.name != 'transfer' %>
+                <% if entry.mcategory.name != 'paycheck' %>
               <% total += entry.amount %>
+                <% end %>
               <% end %>
             <% end %>
             <th scope="row"><%= number_to_currency(total * -1) %></th>
