When transferring, form submits then replaces with new form with amount * -1 to transfer to new account.

--- a/app/views/mentries/_transfer.html.erb
+++ b/app/views/mentries/_transfer.html.erb
@@ -35,32 +35,17 @@
           </div>
 
           <div class="field">
-            <%= form.label :maccount, "From Account" %>
-            <%= form.select :maccount_id, maccounts_dropdown %>
-          </div>
-
-          <div class="field">
-            <%= form.label :mcategory, "From Category" %>
-            <%= form.select :mcategory_id, mcategories_dropdown %>
-          </div>
-
-          <div class="field">
-            <%= form.label :mlocation, "From Location" %>
-            <%= form.select :mlocation_id, mlocations_dropdown %>
-          </div>
-
-          <div class="field">
             <%= form.label :maccount, "To Account" %>
             <%= form.select :maccount_id, maccounts_dropdown %>
           </div>
 
           <div class="field">
-            <%= form.label :mcategory, "From Category" %>
+            <%= form.label :mcategory, "To Category" %>
             <%= form.select :mcategory_id, mcategories_dropdown %>
           </div>
 
           <div class="field">
-            <%= form.label :mlocation, "From Location" %>
+            <%= form.label :mlocation, "To Location" %>
             <%= form.select :mlocation_id, mlocations_dropdown %>
           </div>
 
