--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -4,18 +4,25 @@ $(document).on('change','#transfer', function(){
   select_transfer = $('#transfer').val();
   });
 
-function transfer() {
-  if (select_transfer == 3) {
-    // alert("You selected transfer!");
-    $('#transfer-slide-out').replaceWith("<%= j render 'mentries/transfer' %>");
-  }
-  else {
-    // alert("What's going on here?");
-    $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>")
-  };
-}
+var select_amount;
+$(document).on('input','#mentry_amount', function(){
+  select_amount = $('#mentry_amount').val();
+})
 
-transfer();
+
+if (select_transfer == 3) {
+  // alert("You selected transfer!");
+  $('#transfer-slide-out').replaceWith("<%= j render 'mentries/transfer' %>");
+  $('#mentry_amount').val(select_amount * -1);
+}
+else {
+  // alert("What's going on here?");
+  $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>")
+};
+
+
+
+
 
 // var select_transfer;
 // $(document).on('change','#transfer', function(){
