--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -1,24 +1,26 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Category</th>
-      <th scope="col">Total</th>
-    </tr>
-  </thead>
-  <tbody class="table-row">
-      <% @mcategories.each do |mcategory| %>
-        <tr>
-            <th scope="row"><%= link_to mcategory.name, mcategory_path(mcategory.id) %></th>
-            <% total = 0 %>
-            <% mcategory.mentries.each do |entry| %>
-              <% if entry.mtype.name != 'transfer' %>
-                <% if entry.mcategory.name != 'paycheck' %>
-              <% total += entry.amount %>
+<div id="spending-breakdown">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Category</th>
+        <th scope="col">Total</th>
+      </tr>
+    </thead>
+    <tbody class="table-row">
+        <% @mcategories.each do |mcategory| %>
+          <tr>
+              <th scope="row"><%= link_to mcategory.name, mcategory_path(mcategory.id) %></th>
+              <% total = 0 %>
+              <% mcategory.mentries.each do |entry| %>
+                <% if entry.mtype.name != 'transfer' %>
+                  <% if entry.mcategory.name != 'paycheck' %>
+                <% total += entry.amount %>
+                  <% end %>
                 <% end %>
               <% end %>
-            <% end %>
-            <th scope="row"><%= number_to_currency(total * -1) %></th>
-        <% end %>
-        </tr>
-  </tbody>
-</table>
+              <th scope="row"><%= number_to_currency(total * -1) %></th>
+          <% end %>
+          </tr>
+    </tbody>
+  </table>
+</div>
