--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,6 +3,19 @@
   margin: 0 auto;
 }
 
+.form-container1 {
+  width: 90%;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 8px;
+  box-shadow: 0px 0px 16px 0px #888;
+}
+
+.form-container2 {
+  width: 90%;
+  margin: 20px auto;
+}
+
 h1 {
   text-align: left;
   font-weight: bold;
