--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -9,7 +9,7 @@ body {
   line-height: 18px;
 }
 
-p, ol, ul, td {
+p, ol, ul, td, span {
   font-family: 'Roboto Mono', monospace;
   font-size: 13px;
   line-height: 18px;
