--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -5,6 +5,7 @@ var select_status = $('#mentry_mstatus_id').val();
 var select_account = $('#mentry_maccount_id').val();
 var select_category = $('#mentry_mcategory_id').val();
 var select_location = $('#mentry_mlocation_id').val();
+var split_button = $('#split-yes').val();
 
 if (select_transfer == 3) {
   // alert("You selected transfer!");
@@ -14,6 +15,11 @@ if (select_transfer == 3) {
   $('#mentry_maccount_id').val(select_account);
   $('#mentry_mcategory_id').val(select_category);
   $('#mentry_mlocation_id').val(select_location);
+}
+else if (select_transfer != 3 && split_button == 'on') {
+  $('#transfer-btn').replaceWith('');
+  $('#split-amount').replaceWith(select_amount);
+  $('#transfer-slide-out').replaceWith("<%= j render 'mentries/split' %>");
 }
 else {
   // alert("What's going on here?");
