--- a/app/views/mentries/_transfer.html.erb
+++ b/app/views/mentries/_transfer.html.erb
@@ -1,4 +1,5 @@
-<div id="transfer-slide-out">
+
+  <div id="transfer-slide-out" class="form-container2">
   <h2>New Entry</h2>
     <% if user_signed_in? %>
         <%= form_with model: Mentry.new, url: root_path do |form| %>
@@ -59,4 +60,4 @@
           </div>
       <% end %>
     <% end %>
-</div>
+  </div>
