--- a/app/views/mentries/_postSplitForm.html.erb
+++ b/app/views/mentries/_postSplitForm.html.erb
@@ -1,7 +1,7 @@
 <div id="transfer-slide-out" class="form-container1">
   <div class="form-container2">
     <div>
-      <h1 id="split-amount"></h1>
+      <h1 id="amount-reset"></h1>
     </div>
       <h2>New Entry</h2>
         <% if user_signed_in? %>
@@ -71,5 +71,5 @@
               </div>
             <% end %>
         <% end %>
+    </div>
   </div>
-</div>
