--- a/app/views/mentries/_split.html.erb
+++ b/app/views/mentries/_split.html.erb
@@ -1,9 +1,9 @@
 <div id="transfer-slide-out" class="form-container1">
   <div class="form-container2">
-    <div id="split-amount">
-    <h2>Amount: test</h2>
+    <div>
+      <h1 id="split-amount"></h1>
     </div>
-        <h2>New Entry</h2>
+        <h2>Next Entry</h2>
           <% if user_signed_in? %>
               <%= form_with model: Mentry.new, url: root_path do |form| %>
                 <% if @mentry.errors.any? %>
@@ -19,8 +19,16 @@
                 <% end %>
 
                 <div class="field">
-                  <%= form.label :amount %>
-                  <%= form.text_field :amount %>
+                  <%= form.label :new_amount, "New Amount" %>
+                  <%= form.text_field :amount, class: 'new-amount' %>
+                </div>
+
+                <div class="">
+                  <p>
+                    Split:
+                      <input type="radio" name="split" id="split-yes"><span> Yes</span>
+                      <input type="radio" name="split" id="split-no"><span> No</span>
+                  </p>
                 </div>
 
                 <div class="field">
