--- a/app/views/mentries/_transfer.html.erb
+++ b/app/views/mentries/_transfer.html.erb
@@ -1,4 +1,3 @@
-
   <div id="transfer-slide-out" class="form-container2">
   <h2>New Entry</h2>
     <% if user_signed_in? %>
@@ -18,6 +17,14 @@
           <div class="field">
             <%= form.label :amount %>
             <%= form.text_field :amount %>
+          </div>
+
+          <div class="">
+            <p>
+              Split:
+                <input type="radio" name="split" id="split-yes"><span> Yes</span>
+                <input type="radio" name="split" id="split-no"><span> No</span>
+            </p>
           </div>
 
           <div class="field">
