--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,8 @@
 <% if user_signed_in? %>
+
+<%= pie_chart [[@mcategory.name, @entry.amount], [@mcategory.name, @entry.amount]] %>
+<%= pie_chart chart_array %>
+
   <h1>Dashboard</h1>
     <%= render 'mentries/form', mentry: @mentry %>
     <%= render 'dashboard/maccount_balances' %>
