Reformatted dashboard layout with CSS. Closes #34.

--- a/app/views/dashboard/_piechart.html.erb
+++ b/app/views/dashboard/_piechart.html.erb
@@ -1,1 +1,6 @@
-<%= pie_chart chart_array %>
+<div id="transfer-slide-out" class="form-container1">
+  <div class="form-container2">
+    <h2>Spending Breakdown</h1>
+    <%= pie_chart chart_array %>
+  </div>
+</div>
