--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,19 +1,41 @@
-.container-1 {
+@font-face {
+  font-family: "Ikra Slab";
+src: url('/assets/IkraSlab');
+}
+
+.wrapper1 {
   width: 80%;
   margin: 0 auto;
 }
 
 .form-container1 {
-  width: 90%;
   border-style: solid;
   border-width: thin;
   border-radius: 8px;
   box-shadow: 0px 0px 16px 0px #888;
+  width: 400px;
+  min-width: 400px;
 }
 
 .form-container2 {
-  width: 90%;
-  margin: 20px auto;
+  width: 350px;
+  margin: 25px;
+  min-width: 350px;
+}
+
+.form-container3 {
+  border-style: solid;
+  border-width: thin;
+  border-radius: 8px;
+  box-shadow: 0px 0px 16px 0px #888;
+  width: 500px;
+  min-width: 400px;
+}
+
+.form-container4 {
+  width: 450px;
+  margin: 25px;
+  min-width: 350px;
 }
 
 h1 {
@@ -24,7 +46,10 @@ h1 {
   // margin: -7px -7px 0;
   // background-color: #c00;
   // color: #fff;
-  font-family: 'IBM Plex Serif', serif;
+  // font-family: 'IBM Plex Serif', serif;
+  font-family: 'Ikra Slab';
+  // margin: 9px;
+  letter-spacing: 5px;
 }
 
 h2 {
@@ -35,14 +60,30 @@ h2 {
     // margin: -7px -7px 0;
     // background-color: #c00;
     // color: #fff;
-    font-family: 'IBM Plex Serif', serif;
+    // font-family: 'IBM Plex Serif', serif;
+    font-family: 'Ikra Slab';
+    // margin: 9px;
+    letter-spacing: 5px;
   }
 
 .brand-font {
-  font-family: 'Caveat', cursive;
-  font-size: 44px;
+  font-family: 'Ikra Slab';
+  font-size: 22px;
+  // margin: 9px;
+  letter-spacing: 5px;
+  padding-top: 9px;
+  margin: 9px;
 }
 
-#pie-chart {
-  
+.mooostachio-image-header {
+  border-radius: 8px;
+}
+
+.white-space {
+  height: 30px;
+}
+
+.dash-header {
+  text-align: center;
+  margin: 30px;
 }
