--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -4,8 +4,6 @@
 body {
   background-color: #fff;
   color: #333;
-  margin: 33px;
-  font-size: 13px;
   line-height: 18px;
 }
 
@@ -30,7 +28,8 @@ a {
 
   &:hover {
     color: #fff;
-    background-color: #107B10;
+    background-color: #41DCF0;
+    text-decoration: none;
   }
 }
 
