--- a/app/views/dashboard/_maccount_balances.html.erb
+++ b/app/views/dashboard/_maccount_balances.html.erb
@@ -1,4 +1,5 @@
-<div id="maccount-balances">
+<div id="maccount-balances" class="form-container1">
+  <div class="form-container2">
     <h2>Account Balances</h2>
       <table class="table">
         <thead>
@@ -20,4 +21,5 @@
               </tr>
         </tbody>
       </table>
+  </div>
 </div>
