--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,10 +2,9 @@
 
 <% if user_signed_in? %>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="<%= root_path %>">
-    <%= image_tag("mustache-green.png", width: "40", height: "40", class: "d-inline-block align-top") %>
-    <span class="brand-font">Mooostach.io</span>
-  </a>
+  <a class="mooostachio-image-header" href="<%= root_path %>">
+    <%= image_tag("logo_size_icon_invert.png", width: "40", height: "40", class: "d-inline-block align-top mooostachio-image-header") %>
+  </a><span class="brand-font">MOOOSTACH.IO</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
