--- a/app/views/mentries/_form.html.erb
+++ b/app/views/mentries/_form.html.erb
@@ -33,7 +33,7 @@
 
               <div class="field">
                 <%= form.label :date %>
-                <%= form.datetime_select :date %>
+                <%= form.date_select :date %>
               </div>
 
               <div class="field">
