Changed fonts on forms to be consistent throughout.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -87,3 +87,9 @@ h2 {
   text-align: center;
   margin: 30px;
 }
+
+.form-font {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
+  line-height: 18px;
+}
