--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -9,7 +9,7 @@ body {
 
 p, ol, ul, td, span {
   font-family: 'Roboto Mono', monospace;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 18px;
 }
 
@@ -36,6 +36,8 @@ a {
 th {
   padding-bottom: 5px;
   font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 td {
