--- a/app/views/mentries/_postSplitForm.html.erb
+++ b/app/views/mentries/_postSplitForm.html.erb
@@ -1,4 +1,4 @@
-<div id="transfer-slide-out" class="form-container1">
+<div id="transfer-slide-out" class="form-container1 form-font">
   <div class="form-container2">
     <div>
       <h1 id="amount-reset"></h1>
