--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,6 +18,9 @@
   </div>
 
 <hr>
+  <div class="form-container1">
+      <%= render 'dashboard/datesearch' %>
+  </div>
 
   <h2>Spending Breakdown</h2>
     <%= render 'dashboard/spending' %>
