--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,12 +18,17 @@
   </div>
 
 <hr>
-  <div class="form-container1">
-      <%= render 'dashboard/datesearch' %>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <%= render 'dashboard/datesearch' %>
+      </div>
+      <div class="col">
+        <%= render 'dashboard/spending' %>
+      </div>
+    </div>
   </div>
 
-  <h2>Spending Breakdown</h2>
-    <%= render 'dashboard/spending' %>
   <% else %>
     <%= render 'loggedout' %>
   <% end %>
