Added after_create action for accounts when user is created.

--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -34,6 +34,7 @@ else if (split_button_no == 'on') {
   $('#transfer-slide-out').replaceWith("<%= j render 'mentries/form' %>");
   $('#maccount-balances').replaceWith("<%= j render 'dashboard/maccount_balances' %>");
   $('#spending-breakdown').replaceWith("<%= j render 'dashboard/spending' %>");
+  // $('.faded').animate
   $('#pie-chart').replaceWith("<%= j render 'dashboard/piechart' %>");
   // $('#amount-reset')[0].innerText = "Amount: ";
 }
