--- a/app/views/mtypes/index.html.erb
+++ b/app/views/mtypes/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mtypes</h1>
+<h1>Transaction Types</h1>
 
 <table>
   <thead>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Mtype', new_mtype_path %>
+<%= link_to 'New Transaction Type', new_mtype_path %>
